--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/drawer": "^7.3.9",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.49.4",
-    "expo": "~52.0.46",
+    "expo": "~52.0.47",
     "expo-constants": "~17.0.8",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
@@ -28,6 +28,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-deck-swiper": "^2.0.18",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
